<resources>
    <string name="app_name">MAD-Project-Design-phase</string>
    <string name="GetStaredBtnTxt">Get Started</string>
    <string name="Login"><b>LOG IN</b></string>
    <string name="EmailPlaceholder">Email</string>
    <string name="PasswordPlaceHolder">Password</string>
    <string name="ForgotPasswordLink"><u>Forgot Password ?</u></string>
    <string name="signInBtn">Sign in</string>
    <string name="signUpBtn">Sign up</string>
    <string name="WelcomeBackTxt">Welcome Back!</string>
    <string name="todo">TODO</string>
    <string name="reorderDes">Reorder_Icon</string>
    <string name="notificationDes">Notification_Icon</string>
    <string name="profileDes">Profile_Icon</string>
    <string name="cartDes">Cart_Icon</string>
    <string name="customerName">Thomas Shelby</string>
    <string name="customerEmail">TommyShelby@gmail.com</string>
    <string name="LogoutBtn">Log out</string>
    <string name="sidebarFavRestaurant">My Favorite Restaurants</string>
    <string name="sidebarFavFood">My Favorite Foods</string>
    <string name="sidebarMyReviews">My Reviews</string>
    <string name="sidebarFoodReview">Food Reviews</string>
    <string name="sidebarRestReviews">Restaurant Reviews</string>
    <string name="sidebarCards">Cards</string>
    <string name="sidebarOrders">Orders</string>
    <string name="sidebarPurchaseHistory">Purchase History</string>
    <string name="SigninBtn">SIGN IN</string>
    <string name="signupBtn">SIGN UP</string>
    <string name="cuisineType">CUISINE TYPE</string>
    <string name="italianHeader">ITALIAN</string>
    <string name="americanHeader">AMERICAN</string>
    <string name="indianHeader">INDIAN</string>
    <string name="vegHeader">VEGETARIAN</string>
    <string name="otherHeader">OTHERS</string>
    <string name="CuisineType2">Japanese</string>
    <string name="review">Review</string>
    <string name="notificationHeader">NOTIFICATION</string>
    <string name="NotificationHeader" />
    <string name="NotificationMsg">Shrimp Hot is now Available for you</string>
    <string name="VIEWBTN">view</string>
    <string name="purchaseHistoryHeader">PURCHASE HISTORY</string>
    <string name="totalPrice">LKR 10000</string>
    <string name="TotalHeader">Total</string>
    <string name="HistoryTableHeader1">ID</string>
    <string name="HistoryTableHeader2">DATE AND TIME</string>
    <string name="priceHeader">PRICE</string>
    <string name="Price">LKR 2500</string>
    <string name="OrderID">PM00945</string>
    <string name="dateAndTime">04/08/2021 10:45AM</string>
    <string name="RateHeader">RATE OUR RESTAURANT</string>
    <string name="Hederfeedback">Share Your FeedBack</string>
    <string name="submitReview">submit</string>
    <string name="Hedermenu">MENU</string>
    <string name="foodItem1">Chicken Burger</string>
    <string name="LkrHeader">LKR</string>
    <string name="foodprice">340/=</string>
    <string name="restaurantAddress">Athurugiriya</string>
    <string name="ShowMoreBtn">Show More</string>
    <string name="reviewsubmitHeader">submit a review</string>
    <string name="sampleUsername">John wok</string>
    <string name="selectBtn">select</string>
    <string name="payBtn">pay</string>
    <string name="cvhint">cvv / cvc</string>
    <string name="updateBtn">update</string>
    <string name="reviewsuccessfullyMessage">Review Saved Successfully!</string>
    <string name="myRestaurantReviewHeader">MY RESTAURANT REVIEW</string>
    <string name="caloriesFoodName">Cheesy Chicken Spaghetti</string>
    <string name="customizedHeader">Customized List</string>
    <string name="ingredientxt1">Spaghetti</string>
    <string name="ingredientxt2">Chicken</string>
    <string name="ingredientxt3">Cheese</string>
    <string name="ingredientxt5">Creamy sauce</string>
    <string name="TotalCaloriesHeader">Total Calories :</string>
    <string name="calories1">128 kcal</string>
    <string name="calories2">160 kcal</string>
    <string name="calories3">189 kcal</string>
    <string name="calories4">62 kcal</string>
    <string name="totalCaloriesNo">539 kcal</string>
    <string name="et_firstname">First Name</string>
    <string name="et_lastname">Last Name</string>
    <string name="et_email">Email</string>
    <string name="first_name">Naveen</string>
    <string name="et_last_name">Anushka</string>
    <string name="up_email">naveenanushka23@gmail.com</string>
    <string name="up_phone">0765547895</string>
    <string name="up_address">No, 65/A, Galle Road, Colombo O6</string>
    <string name="up_edit">Edit</string>
    <string name="up_view_add">View Addresses</string>
    <string name="add_new_address"><b>Add New Address</b></string>
    <string name="text_input_layout">Province</string>
    <string name="et_province">Province</string>
    <string name="et_city">City</string>
    <string name="layout_address">Address</string>
    <string name="button_save">Save</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Agree"><b>I agree all statements in terms and conditions</b></string>
    <string name="Sign_UP">Sign Up</string>
    <string name="alredy_account">Already have an account ?</string>
    <string name="log_in"><a href="">Login </a></string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="edit_fn">Naveen</string>
    <string name="edit_ln">Anushka</string>
    <string name="edit_email">naveenanushka1998@gmail.com</string>
    <string name="edit_address">No, 65/A, Galle Road, Colombo 06</string>
    <string name="edit_phone">0765587451</string>
    <string name="Change_P"><b>Change Password</b></string>
    <string name="Current_Password">Current Passowrd</string>
    <string name="new_P">New Password</string>
    <string name="confirm_P">Confirm Password</string>
    <string name="Update_btn">Update</string>
    <string name="Delete_btn">Delete</string>
    <string name="my_address"><b>My Address</b></string>
    <string name="address1"><b>Address 1</b></string>
    <string name="address_l">Naveen Anushka</string>
    <string name="add_name">Naveen Anushka</string>
    <string name="Province">Western Province</string>
    <string name="Province1"><b>Province - </b></string>
    <string name="City">Colombo</string>
    <string name="city_name">City</string>
    <string name="city_na"><b>City - </b></string>
    <string name="address2"><b>Address 2</b></string>
    <string name="add_name2">Amal Gunawardane</string>
    <string name="add_li2">No,366/7, Galle Road, Kalutara South</string>
    <string name="City_Name_K">Kalutara</string>
    <string name="add_new_ad">Add address</string>
    <string name="add_addres">Add address</string>
    <string name="your_orders"><b>Your Orders</b></string>
    <string name="rest_name"><b>Panorama Hotel</b></string>
    <string name="foods">"Sandwich Bread-Small "</string>
    <string name="total"><b>Total: </b></string>
    <string name="total_price">LKR.1450.00</string>
    <string name="food_name"><b>Food Name</b></string>
    <string name="quantity"><b>Quantity</b></string>
    <string name="price"><b>Price</b></string>
    <string name="food1">Lava Cake</string>
    <string name="food2">Chicken Burger</string>
    <string name="qty2">2</string>
    <string name="qty3">1</string>
    <string name="qty4">1</string>
    <string name="lava_price">650.00</string>
    <string name="burger_price">700.00</string>
    <string name="price_bread">100.00</string>
    <string name="total_amount1"><b>1450.00</b></string>
    <string name="my_cart"><b>My Cart </b></string>
    <string name="cart_fname">Name</string>
    <string name="food_namec"><b><![CDATA[Double Chicken & Cheese Fiesta]]></b></string>
    <string name="food_des">A combination of spicy chicken and kotchchi sausage meat with crun...</string>
    <string name="price_f"><b>Price: </b></string>
    <string name="pizza_price">LKR.1900.00</string>
    <string name="Qty"><b>Qty:  1 </b></string>
    <string name="garlic_bread"><b>Garlic Bread</b></string>
    <string name="gbread_des"><![CDATA[Sliced & spread with garlic buttery goodness.]]></string>
    <string name="gbread_price">LKR.300.00</string>
    <string name="All"><b>All</b></string>
    <string name="checkout">Checkout</string>
    <string name="total_a"><b>Total:  LKR.2200.00</b></string>
    <string name="btn_discover_rest">Discover Restaurants</string>
    <string name="btn_search">Search</string>
    <string name="random_dishes"><b>Random Dishes</b></string>
    <string name="burger"><b>BLT Chicken Jr.</b></string>
    <string name="burger_description1">Our Classic Chicken Jr. Sandwich is loaded with chopped lettuce, creamy mayonnaise.</string>
    <string name="amount"><b>LKR.650.00</b></string>
    <string name="milk_shake"><b>Chocolate Milk Shake</b></string>
    <string name="milk_s_des">Delicious milkshake topped with whipped cream and a chocolate.</string>
    <string name="milk_s_price"><b>LKR.450.00</b></string>
    <string name="Restaurants"><b>Restaurants</b></string>
    <string name="cafe_name"><b>Cafe Crepe</b></string>
    <string name="cuisine_typ"><b>Cuisine Type: </b></string>
    <string name="location"><b>Location:</b></string>
    <string name="RestaurantName2">MAKI SUSHI</string>
    <string name="yourFavourites"><b>Your Favourites</b></string>
    <string name="customize_TotalPrice">Total Price</string>
    <string name="ratingsAndReviews"><b>Ratings And Reviews</b></string>
    <string name="ratings_btn_customize">Customize food</string>
    <string name="customize_btn_AddToCart">Add to Cart</string>
    <string name="customize_btn_showCal">Show Calories</string>
    <string name="myReviews_topic"><b>My Reviews</b></string>
    <string name="update_delete_review_UpdateBtn">Update Review</string>
    <string name="update_delete_review_DeleteBtn">Delete Review</string>
    <string name="update_review">Update Review</string>
    <string name="create_review_rate">Rate this food</string>
    <string name="create_review_review">Write a Review</string>
    <string name="create_review_btn_submit">Submit</string>
    <string name="RestaurantHeader">Discover Restaurants!</string>
    <string name="restaurantName1">SOUTH AMERICAN GRILL</string>
    <string name="CuisineType">American</string>
    <string name="Location1">Athurugiriya</string>
    <string name="cuisineType2">Japanese</string>
    <string name="Location2">Thalawathugoda</string>
    <string name="Ratings">3.6 / 5.0</string>
    <string name="BankName">SEYLAN</string>
    <string name="cardNo">XXXX XXXX XXXX 3196</string>
    <string name="CardHoldername">H S WEERASINGHE</string>
    <string name="carExpirationDate">04/21</string>
    <string name="CardHolderHeader">Card Holder</string>
    <string name="ExpirationDateHeader">MM/YY</string>
    <string name="CardType">VISA</string>
    <string name="CardDetailsHeader">CARD DETAILS</string>
    <string name="editBtn">EDIT</string>
    <string name="deleteBtn">Delete</string>
    <string name="PurchaseHistoryHeader">PURCHASE HISTORY</string>
    <string name="CheckoutHeader">CHECKOUT</string>
    <string name="DeliveryHeaderTo">Delivering To : </string>
    <string name="orderheader">Order For : </string>
    <string name="RecipientHeader">Recipient Details</string>
    <string name="TitleHeader">Title :</string>
    <string name="nameHeader">Name : </string>
    <string name="phoneHeader">Phone No : </string>
    <string name="orderPaymentHeader">Order / Payment Details</string>
    <string name="Loginheader">LOG IN</string>
    <string name="welcomeHeader">Welcome Back!</string>
    <string name="emailPalceHolder">Email</string>
</resources>