<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view_address">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="327dp"
                android:layout_marginRight="327dp"
                android:layout_marginBottom="7dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/reorderDes"
                app:srcCompat="@drawable/ic_reorder"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="114dp"
                android:layout_marginRight="114dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/notificationDes"
                app:srcCompat="@drawable/ic_notification"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="78dp"
                android:layout_marginRight="78dp"
                android:layout_marginBottom="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/profileDes"
                app:srcCompat="@drawable/ic_profile"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="13dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/cartDes"
                app:srcCompat="@drawable/ic_cart"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/my_address"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:text="@string/my_address"
        android:textColor="@color/ThemeBlack"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="394dp"
        android:layout_height="274dp"
        app:cardMaxElevation="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_address"
        app:layout_constraintVertical_bias="0.241">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/address1"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/address1"
                android:textColor="@color/ThemeBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add_name"
                android:layout_width="233dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="76dp"
                android:text="@string/add_name"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/address_li"
                android:layout_width="322dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="100dp"
                android:text="@string/edit_address"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/add_province"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="175dp"
                android:text="@string/Province1"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="117dp"
                android:layout_marginLeft="117dp"
                android:layout_marginTop="176dp"
                android:text="@string/Province"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/city"
                android:layout_width="233dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="27dp"
                android:text="@string/city_na"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/City_name"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="84dp"
                android:layout_marginRight="84dp"
                android:layout_marginBottom="27dp"
                android:text="@string/City"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/Delete_btn"
                app:backgroundTint="@color/ThemeGreen" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="394dp"
        android:layout_height="274dp"
        app:cardMaxElevation="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.303" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/address2"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="203dp"
                android:text="@string/address2"
                android:textColor="@color/ThemeBlack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add_name2"
                android:layout_width="233dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="152dp"
                android:text="@string/add_name2"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/add_li2"
                android:layout_width="322dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="129dp"
                android:text="@string/add_li2"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/province2"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="58dp"
                android:text="@string/Province1"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/province_name"
                android:layout_width="232dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="49dp"
                android:layout_marginRight="49dp"
                android:layout_marginBottom="59dp"
                android:text="@string/Province"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/city2"
                android:layout_width="233dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="25dp"
                android:text="@string/city_na"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/city_na2"
                android:layout_width="235dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="83dp"
                android:layout_marginRight="83dp"
                android:layout_marginBottom="26dp"
                android:text="@string/City_Name_K"
                android:textColor="@color/ThemeBlack"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_delete2"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="210dp"
                android:text="@string/Delete_btn"
                app:backgroundTint="@color/ThemeGreen" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="281dp"
        android:layout_height="72dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_n_address"
        android:layout_width="187dp"
        android:layout_height="47dp"
        android:layout_marginTop="132dp"
        android:text="@string/add_addres"
        app:backgroundTint="@color/ThemeGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_plus"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>